# WinDurango

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
projects/WinDurango.Common/: CMakeLists.txt
projects/WinDurango.Common/include/WinDurango.Common/: Config.h  GUI.h  Logging.h  WinDurango.h  exports.h
projects/WinDurango.Common/include/WinDurango.Common/Interfaces/Storage/: Directory.h  File.h
projects/WinDurango.Common/src/: Config.cpp  GUI.cpp  Logging.cpp  WinDurango.cpp
projects/WinDurango.D3D11X/: CMakeLists.txt
projects/WinDurango.D3D11X/include/WinDurango.D3D11X/: ID3D11DMAEngineContext.h  ID3D11Device.h  ID3D11DeviceChild.h  ID3D11DeviceContext.h  ID3D11Resource.h  ID3D11Runtime.h  ID3D11Shader.h  ID3D11State.h  ID3D11View.h  IDXGIAdapter.h  IDXGIDevice.h  IDXGIFactory.h  IDXGISwapChain.h  IGraphicsUnknown.h  IIDExports.h  d3d11.x.h  d3d11_x.g.h  unknown.g.h
projects/WinDurango.D3D11X/include/WinDurango.D3D11X/wil/: Tracelogging.h  com.h  com_apartment_variable.h  common.h  coroutine.h  cppwinrt.h  cppwinrt_authoring.h  cppwinrt_helpers.h  cppwinrt_notifiable_module_lock.h  cppwinrt_register_com_server.h  cppwinrt_wrl.h  filesystem.h  nt_result_macros.h  registry.h  registry_helpers.h  resource.h  result.h  result_macros.h  result_originate.h  rpc_helpers.h  safecast.h  stl.h  token_helpers.h  win32_helpers.h  win32_result_macros.h  windowing.h  winrt.h  wistd_config.h  wistd_functional.h  wistd_memory.h  wistd_type_traits.h  wrl.h
projects/WinDurango.D3D11X/include/WinDurango.D3D11X/xcom/: base.h
projects/WinDurango.D3D11X/src/: ID3D11DMAEngineContext.cpp  ID3D11Device.cpp  ID3D11DeviceChild.cpp  ID3D11DeviceContext.cpp  ID3D11Resource.cpp  ID3D11Shader.cpp  ID3D11State.cpp  ID3D11View.cpp  IDXGIAdapter.cpp  IDXGIDevice.cpp  IDXGIFactory.cpp  IDXGISwapChain.cpp  IGraphicsUnknown.cpp  IIDExports.cpp  d3d11.x.cpp  dllmain.cpp
projects/WinDurango.D3D12X/: CMakeLists.txt  WinDurango.D3D12X.cpp  WinDurango.D3D12X.h
projects/WinDurango.KernelX/: CMakeLists.txt
projects/WinDurango.KernelX/include/WinDurango.KernelX/: CurrentApp.h  D3D11Peggle2Hook.h  EraCoreApplication.h  EraCoreWindow.h  ForzaThreadHook.h  Hooks.h  Logan.h  MMDeviceEnumerator.h  kernelx.h
projects/WinDurango.KernelX/src/: CurrentApp.cpp  EraCoreApplication.cpp  EraCoreWindow.cpp  Hooks.cpp  MMDeviceEnumerator.cpp  dllmain.cpp  kernelx.cpp
projects/WinDurango.Kinect/: CMakeLists.txt  README.md
projects/WinDurango.Kinect/idl/: Windows.Kinect.idl
projects/WinDurango.Kinect/include/WinDurango.Kinect/: WinDurangoKinect.h
projects/WinDurango.Kinect/include/WinDurango.Kinect/Windows/Kinect/: Windows.Kinect.Body.h  Windows.Kinect.FrameDescription.h  Windows.Kinect.KinectSensor.h
projects/WinDurango.Kinect/src/: WinDurangoKinect.cpp
projects/WinDurango.Kinect/src/Windows/Kinect/: Windows.Kinect.Body.cpp  Windows.Kinect.FrameDescription.cpp  Windows.Kinect.KinectSensor.cpp
projects/WinDurango.MFPlat/: CMakeLists.txt  exports.def
projects/WinDurango.MFPlat/include/WinDurango.MFPlat/: WinDurango.MFPlat.h
projects/WinDurango.MFPlat/src/: WinDurango.MFPlat.cpp
projects/WinDurango.WinRT/: CMakeLists.txt  WinDurango.WinRT.def
projects/WinDurango.WinRT/include/: pch.h
projects/WinDurango.WinRT/include/WinDurango.WinRT/: WinDurangoWinRT.h
projects/WinDurango.WinRT/src/: WinDurangoWinRT.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/Achievements/: Windows.Xbox.Achievements.AchievementNotifier.cpp  Windows.Xbox.Achievements.AchievementSource.cpp  Windows.Xbox.Achievements.AchievementUnlockedEventArgs.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/ApplicationModel/: Windows.Xbox.ApplicationModel.Help.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/Chat/: Windows.Xbox.Chat.ChatChannel.cpp  Windows.Xbox.Chat.ChatDecoder.cpp  Windows.Xbox.Chat.ChatEncoder.cpp  Windows.Xbox.Chat.ChatParticipant.cpp  Windows.Xbox.Chat.ChatSession.cpp  Windows.Xbox.Chat.ChatUserCorrelation.cpp  Windows.Xbox.Chat.Format.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/Input/: Windows.Xbox.Input.BiometricUser.cpp  Windows.Xbox.Input.BodyController.cpp  Windows.Xbox.Input.BodyHandPair.cpp  Windows.Xbox.Input.Controller.cpp  Windows.Xbox.Input.Gamepad.cpp  Windows.Xbox.Input.NavigationController.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/Media/: GameTransportControls.cpp  GameTransportControlsButtonPressedEventArgs.cpp  GameTransportControlsPropertyChangedEventArgs.cpp  Windows.Xbox.Media.GameTransportControls.cpp  Windows.Xbox.Media.GameTransportControlsButtonPressedEventArgs.cpp  Windows.Xbox.Media.GameTransportControlsPropertyChangedEventArgs.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/Multiplayer/: Windows.Xbox.Multiplayer.MultiplayerSessionReference.cpp  Windows.Xbox.Multiplayer.Party.cpp  Windows.Xbox.Multiplayer.PartyChat.cpp  Windows.Xbox.Multiplayer.PartyConfig.cpp  Windows.Xbox.Multiplayer.PartyView.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/Networking/: Windows.Xbox.Networking.Development.cpp  Windows.Xbox.Networking.ErrorMessages.cpp  Windows.Xbox.Networking.NetworkCache.cpp  Windows.Xbox.Networking.QualityOfService.cpp  Windows.Xbox.Networking.SecureDeviceAddress.cpp  Windows.Xbox.Networking.SecureDeviceAssociation.cpp  Windows.Xbox.Networking.SecureDeviceAssociationTemplate.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/Services/: Windows.Xbox.Services.XboxLiveConfiguration.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/Storage/: Windows.Xbox.Storage.ConnectedStorage.cpp  Windows.Xbox.Storage.ConnectedStorageContainer.cpp  Windows.Xbox.Storage.ConnectedStorageSpace.cpp  Windows.Xbox.Storage.ContainerInfoQueryResult.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/System/: Windows.Xbox.System.AudioDeviceInfo.cpp  Windows.Xbox.System.User.cpp  Windows.Xbox.System.UserDisplayInfo.cpp  Windows.Xbox.System.cpp
projects/WinDurango.WinRT/src/Windows/Xbox/UI/: Windows.Xbox.UI.Accessibility.cpp  Windows.Xbox.UI.AccountPickerResult.cpp  Windows.Xbox.UI.CloudStreamingSystemUI.cpp  Windows.Xbox.UI.KeyboardOptions.cpp  Windows.Xbox.UI.SystemUI.cpp  (+1 more)
(+171 files in other folders)
